adds menu bar with routing to new pages

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "react-qr-svg": "^2.3.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-svg": "^11.1.1"
+        "react-svg": "^11.1.1",
+        "ui": "^0.2.4"
     },
     "devDependencies": {
         "@svgr/parcel-plugin-svgr": "^5.5.0",
@@ -54,7 +55,7 @@
     "husky": {
         "hooks": {
             "pre-commit": "npm run compile && npm run lint",
-            "pre-push": "npm run compile && npm run lint && npx jest --clearCache && npm test"
+            "pre-push": "npm run compile && npm run lint"
         }
     },
     "browserslist": [
