--- a/package.json
+++ b/package.json
@@ -4,23 +4,20 @@
     "description": "Web apperance for the MMORPG Dark Triad",
     "author": "Denis Wagner",
     "dependencies": {
+        "@auth0/auth0-react": "^1.8.0",
         "app": "^0.1.0",
         "classnames": "^2.2.6",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-qr-svg": "^2.3.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-svg": "^11.1.1",
         "ui": "^0.2.4"
     },
     "devDependencies": {
-        "@svgr/parcel-plugin-svgr": "^5.5.0",
         "@testing-library/dom": "^7.26.6",
         "@testing-library/jest-dom": "^5.11.6",
         "@testing-library/react": "^11.1.2",
         "@types/classnames": "^2.2.11",
-        "@types/jest": "^26.0.15",
         "@types/react": "^16.9.56",
         "@types/react-dom": "^16.9.9",
         "@types/react-router": "^5.1.8",
@@ -29,33 +26,26 @@
         "@typescript-eslint/parser": "^4.7.0",
         "eslint": "^7.13.0",
         "eslint-config-prettier": "^6.15.0",
-        "eslint-plugin-jest": "^24.1.3",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.2.0",
         "husky": "^4.3.0",
-        "jest": "^26.6.3",
         "parcel-bundler": "^1.12.4",
         "parcel-plugin-html-externals": "^0.2.0",
         "parcel-plugin-static-files-copy": "^2.5.0",
         "prettier": "^2.1.2",
         "sass": "^1.29.0",
-        "ts-jest": "^26.4.4",
         "typescript": "^4.0.5"
     },
     "scripts": {
         "clean": "rimraf ./.cache ./build ./coverage",
         "build": "parcel build src/index.html --out-dir build/release --public-url ./",
-        "start": "parcel src/index.html --out-dir build/dev --port 8000",
+        "start": "parcel src/index.html --out-dir build/dev --port 1234",
         "compile": "tsc --noEmit --project tsconfig.compile.json",
-        "lint": "eslint src/ --ext '.ts, .tsx' --max-warnings 0",
-        "test": "jest --config jest.config.json",
-        "test:coverage": "jest --collect-coverage --config jest.config.json",
-        "test:watch": "jest --watch --config jest.config.json"
+        "lint": "eslint src/ --ext '.ts, .tsx' --max-warnings 0"
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm run compile && npm run lint",
             "pre-push": "npm run compile && npm run lint"
         }
     },
