adds simple user login

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "author": "Denis Wagner",
     "dependencies": {
         "@auth0/auth0-react": "^1.8.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/react-fontawesome": "^0.1.16",
         "app": "^0.1.0",
         "classnames": "^2.2.6",
         "react": "^17.0.1",
@@ -32,15 +35,14 @@
         "husky": "^4.3.0",
         "parcel-bundler": "^1.12.4",
         "parcel-plugin-html-externals": "^0.2.0",
-        "parcel-plugin-static-files-copy": "^2.5.0",
         "prettier": "^2.1.2",
         "sass": "^1.29.0",
         "typescript": "^4.0.5"
     },
     "scripts": {
         "clean": "rimraf ./.cache ./build ./coverage",
-        "build": "parcel build src/index.html --out-dir build/release --public-url ./",
-        "start": "parcel src/index.html --out-dir build/dev --port 1234",
+        "build": "parcel build src/index.html --out-dir build/release --public-url --no-source-maps ./",
+        "start": "parcel src/index.html --out-dir build/dev --port 1234 --no-source-maps",
         "compile": "tsc --noEmit --project tsconfig.compile.json",
         "lint": "eslint src/ --ext '.ts, .tsx' --max-warnings 0"
     },
