--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,21 +1,21 @@
 on: 
   push:
     branches:
-      - release
+      - main
 
-name: Nitrado build and deploy
+name: Build and deploy
 jobs:
-  web-deploy:
-    name: Deploy
+  build-deploy:
+    name: Build and deploy
     runs-on: ubuntu-latest
     steps:
     - name: Get latest code
       uses: actions/checkout@v2.3.2
 
-    - name: Use Node.js 12
-      uses: actions/setup-node@v2-beta
+    - name: Use Node.js 16
+      uses: actions/setup-node@v2
       with:
-        node-version: '12'
+        node-version: '16'
       
     - name: Build Project
       run: |
@@ -23,10 +23,10 @@ jobs:
         npm run build
     
     - name: Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.0.0
+      uses: SamKirkland/FTP-Deploy-Action@4.1.0
       with:
-        server: wagnrd.de
-        username: ni816240_1ftp1
-        password: ${{ secrets.password }}
+        server: darktriad.wagnrd.de
+        username: ${{ secrets.ftp_username }}
+        password: ${{ secrets.ftp_password }}
         local-dir: ./build/release/
         exclude: '.ftpquota, .htaccess'
