--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
             "jsx": true
         }
     },
-    "plugins": ["react-hooks", "jest"],
+    "plugins": ["react-hooks"],
     "rules": {
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "error",
@@ -22,11 +22,6 @@
         "@typescript-eslint/no-unused-vars": "error",
         "@typescript-eslint/no-explicit-any": "error",
         "prettier/prettier": ["error"],
-        "jest/no-disabled-tests": "error",
-        "jest/no-focused-tests": "error",
-        "jest/no-identical-title": "error",
-        "jest/prefer-to-have-length": "error",
-        "jest/valid-expect": "error",
         "react/display-name": "off"
     },
     "settings": {
