--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,4 @@
-on: 
+on:
   push:
     branches:
       - main
@@ -9,24 +9,24 @@ jobs:
     name: Build and deploy
     runs-on: ubuntu-latest
     steps:
-    - name: Get latest code
-      uses: actions/checkout@v2.3.2
+      - name: Checkout code
+        uses: actions/checkout@v2.3.2
 
-    - name: Use Node.js 16
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-      
-    - name: Build Project
-      run: |
-        npm install
-        npm run build
-    
-    - name: Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.1.0
-      with:
-        server: darktriad.wagnrd.de
-        username: ${{ secrets.ftp_username }}
-        password: ${{ secrets.ftp_password }}
-        local-dir: ./build/release/
-        exclude: '.ftpquota, .htaccess'
+      - name: Set up Node.js 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Build Project
+        run: |
+          npm install
+          npm run build
+
+      - name: Deploy to web server
+        uses: SamKirkland/FTP-Deploy-Action@4.1.0
+        with:
+          server: darktriad.wagnrd.de
+          username: ${{ secrets.ftp_username }}
+          password: ${{ secrets.ftp_password }}
+          local-dir: ./build/release/
+          exclude: '.ftpquota, .htaccess'
